# ogx-hybrid

./: .gitmodules  CMakeLists.txt  README.md  btstack_config.h  tusb_config.h
.github/workflows/: build.yml
app-audio/: CMakeLists.txt  memmap_audio.ld
app-audio/src/: main.c  pico_w_led.c
app-audio/src/tinyusb/: uac.c
app-controller/Firmware/RP2040/: CMakeLists.txt  memmap_controller.ld
app-controller/Firmware/RP2040/src/Board/: Config.h
app-controller/Firmware/RP2040/src/OGXMini/Board/: PicoW.cpp
app-controller/Firmware/RP2040/src/USBDevice/DeviceDriver/XInput/: XInput.cpp
app-controller/Firmware/RP2040/src/USBDevice/DeviceDriver/XInput/tud_xinput/: tud_xinput.cpp
app-controller/Firmware/RP2040/src/USBDevice/DeviceDriver/XboxOG/tud_xid/: tud_xid.cpp
app-controller/Firmware/RP2040/src/USBHost/HostDriver/XInput/: Xbox360W.cpp
app-controller/Firmware/RP2040/src/USBHost/HostDriver/XInput/tuh_xinput/: tuh_xinput.cpp
app-controller/Firmware/RP2040/src/UserSettings/: NVSTool.h
bootloader/: CMakeLists.txt
bootloader/cmake/: memmap_bootloader.ld
bootloader/src/: main.c
hybrid_config/: tusb_config_hybrid.h
ogxmini_src/: hybrid_wrappers.cpp  tusb_config.h
ogxmini_src/BLEServer/: att_delayed_response.h
ogxmini_src/Bluepad32/: Bluepad32.cpp  Bluepad32.h
ogxmini_src/OGXMini/Board/: PicoW.h  PicoW_Hybrid.cpp
ogxmini_src/USBDevice/: HybridDescriptors.cpp  HybridDescriptors.h
ogxmini_src/USBDevice/DeviceDriver/XboxOG/tud_xid/: tud_xid.cpp
scripts/: combine_uf2.py
shared/: boot_confirm.h  flash_layout.cmake  flash_map.h  memmap_rp2350_offset.ld.in
src/: main_hybrid.c
src/tinyusb/: uac.c
